--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Programming Language Foundations in Agda》/第一分册：逻辑基础/第一分册：逻辑基础.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Programming Language Foundations in Agda》/第一分册：逻辑基础/第一分册：逻辑基础.md
@@ -11,3 +11,67 @@
 - [Decidable](https://agda-zh.github.io/PLFA-zh/Decidable/): 布尔值与判定过程
 - [Lists](https://agda-zh.github.io/PLFA-zh/Lists/): 列表与高阶函数
 
+### 第一分册：逻辑基础
+
+这一分册涵盖了逻辑和证明的基本概念，以及如何在计算和编程中应用这些概念。通过系统地介绍自然数、归纳证明、关系定义、相等性、同构、逻辑运算符、否定、量词、判定过程和列表操作等内容，建立了强大的逻辑推理工具和编程技巧。这一分册的章节总结如下：
+
+#### 1. **Naturals: 自然数**
+   - **内容概述**：介绍了自然数的定义及其在计算中的应用。定义了自然数的归纳法，以及如何通过递归定义自然数的基本运算，如加法、乘法和减法。
+   - **核心概念**：自然数的递归定义、自然数的基本运算、零和继承（`zero` 和 `suc`）的结构。
+
+#### 2. **Induction: 归纳证明**
+   - **内容概述**：详细讲解了如何使用归纳法来证明关于自然数的命题。归纳证明是一种重要的证明技术，尤其在递归定义的结构上。
+   - **核心概念**：基础归纳证明、递归函数的正确性证明、结构归纳。
+
+#### 3. **Relations: 关系的归纳定义**
+   - **内容概述**：引入了关系的概念，尤其是自然数之间的关系，如“小于或等于”（`≤`）。通过归纳定义了关系，并探讨了如何通过这些定义来进行证明。
+   - **核心概念**：关系的归纳定义、反身性、传递性和对称性、关系的归纳证明。
+
+#### 4. **Equality: 相等性与等式推理**
+   - **内容概述**：介绍了相等性的定义及其在证明中的作用。探讨了如何通过等式推理来进行证明，以及等式的对称性、反身性和传递性。
+   - **核心概念**：相等性的公理化定义、等式推理、证明等式的正确性。
+
+#### 5. **Isomorphism: 同构与嵌入**
+   - **内容概述**：解释了同构和嵌入的概念，讨论了不同类型之间的结构性对应关系。探讨了如何证明两个类型是同构的，以及如何构建类型之间的映射。
+   - **核心概念**：同构关系、嵌入关系、同构的证明、类型之间的结构性映射。
+
+#### 6. **Connectives: 合取、析取与蕴涵**
+   - **内容概述**：介绍了逻辑运算符（如合取、析取和蕴涵）的定义及其在证明中的应用。探讨了这些运算符的性质以及如何使用它们来构造复杂的命题和证明。
+   - **核心概念**：逻辑运算符的性质、合取和析取的分配律、蕴涵的性质、德摩根定律。
+
+#### 7. **Negation: 直觉逻辑与命题逻辑中的否定**
+   - **内容概述**：讨论了否定的概念，尤其是在直觉逻辑和经典逻辑中的应用。讲解了如何在直觉逻辑中构造和使用否定，以及与经典逻辑的区别。
+   - **核心概念**：否定的定义、否定的引入和消除、直觉逻辑与经典逻辑的区别、反证法。
+
+#### 8. **Quantifiers: 全称量词与存在量词**
+   - **内容概述**：探讨了量词的定义，尤其是全称量词（`∀`）和存在量词（`∃`）。讨论了如何在逻辑命题中使用量词，以及量词在证明中的作用。
+   - **核心概念**：全称量词和存在量词的定义、量词在证明中的使用、量词的消除与引入、德摩根定律在量词中的应用。
+
+#### 9. **Decidable: 布尔值与判定过程**
+   - **内容概述**：讨论了可判定性和布尔逻辑之间的关系，介绍了如何通过布尔值来表示和计算命题的真假。进一步探讨了如何构建判定过程来自动化证明。
+   - **核心概念**：布尔逻辑、可判定性、判定过程、反射证明、判定性与布尔值的关系。
+
+#### 10. **Lists: 列表与高阶函数**
+   - **内容概述**：介绍了列表数据结构，并通过列表演示了多态类型和高阶函数的应用。探讨了列表的基本操作（如附加、反转、映射、折叠）及其证明。
+   - **核心概念**：列表的递归定义、多态性、高阶函数、列表的基本操作、列表的归纳证明。
+
+### 总结
+第一分册系统地介绍了逻辑基础，通过详细讲解自然数、归纳法、关系、相等性、同构、逻辑运算符、否定、量词、判定过程和列表操作等内容，为读者奠定了坚实的逻辑推理和编程基础。这些内容不仅涵盖了数学逻辑的核心概念，也展示了如何在编程中应用这些逻辑工具，从而将逻辑推理和实际计算紧密结合起来。
+
+
+
+以下是第一分册《逻辑基础》各章节的总结，以表格形式呈现：
+
+| 章节                                     | 内容概述                                                     | 核心概念                                                     |
+| ---------------------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| **Naturals: 自然数**                     | 介绍自然数的定义及其在计算中的应用，定义自然数的归纳法及基本运算。 | 自然数递归定义、自然数基本运算、零和继承的结构。             |
+| **Induction: 归纳证明**                  | 讲解归纳法在自然数命题证明中的应用，特别是递归结构上的证明。 | 基础归纳证明、递归函数的正确性证明、结构归纳。               |
+| **Relations: 关系的归纳定义**            | 引入自然数之间的关系，并通过归纳定义进行证明，如“小于或等于”。 | 关系的归纳定义、反身性、传递性、对称性、归纳证明。           |
+| **Equality: 相等性与等式推理**           | 讨论相等性的定义及其在证明中的应用，探讨等式推理和相等性的性质。 | 相等性公理化定义、等式推理、相等性证明。                     |
+| **Isomorphism: 同构与嵌入**              | 解释同构和嵌入的概念，探讨不同类型之间的结构性对应关系及其证明。 | 同构关系、嵌入关系、同构证明、类型间结构性映射。             |
+| **Connectives: 合取、析取与蕴涵**        | 介绍逻辑运算符（如合取、析取、蕴涵）的定义及其在证明中的应用。 | 逻辑运算符性质、合取与析取分配律、蕴涵性质、德摩根定律。     |
+| **Negation: 直觉逻辑与命题逻辑中的否定** | 讨论否定的概念，特别是在直觉逻辑与经典逻辑中的应用及其区别。 | 否定的定义、否定引入与消除、直觉逻辑与经典逻辑区别、反证法。 |
+| **Quantifiers: 全称量词与存在量词**      | 探讨全称量词和存在量词的定义及其在逻辑命题和证明中的作用。   | 全称量词与存在量词定义、量词在证明中的应用、量词消除与引入、德摩根定律。 |
+| **Decidable: 布尔值与判定过程**          | 讨论可判定性与布尔逻辑的关系，介绍判定过程及其在自动化证明中的应用。 | 布尔逻辑、可判定性、判定过程、反射证明、判定性与布尔值关系。 |
+| **Lists: 列表与高阶函数**                | 介绍列表数据结构，演示多态类型和高阶函数的应用，探讨列表的基本操作及其证明。 | 列表递归定义、多态性、高阶函数、列表基本操作、列表归纳证明。 |
+
